--- a/CLIP.ipynb
+++ b/CLIP.ipynb
@@ -248,7 +248,7 @@
         }
       ],
       "source": [
-        "!git clone https://github.com/TharunSivamani/CLIP.git\n",
+        "!git clone https://github.com/VarunSivamani/CLIP.git\n",
         "%cd CLIP"
       ]
     },
